Work being done on the twitter API call

--- a/client/contact/contact.html
+++ b/client/contact/contact.html
@@ -10,7 +10,14 @@
 			<p>
 				Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel. Vestibulum et efficitur urna. Duis velit nulla, interdum sed felis sit amet, facilisis auctor nunc. Cras luctus urna at risus feugiat scelerisque nec sed diam.
 			</p>
+
+			<div id="twit-app-response">
+				{{> twitAppResponse}}
+			</div>
 		</div>
 	</div>
+</template>
 
+<template name="twitAppResponse">
+	<button class="twit-get-tweet">Find a tweet</button>
 </template>
