work done on data migration from server to client, no success yet

--- a/client/main/index.html
+++ b/client/main/index.html
@@ -15,7 +15,7 @@ Released   : 20140322
 <template name="index">
   <body>
     <div class="wrapper">
-      <div id="banner" class="container"><img src="images/banner.jpg" width="1200" height="500" alt="" /></div>
+      <div id="banner" class="container"><img src="images/banner.jpg" width="1200" height="500" alt=""></div>
       <div id="welcome" class="container">
             
         <div class="title">
@@ -32,12 +32,19 @@ Released   : 20140322
           </div>
           <p>Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac suscipit mauris. Proin eu wisi suscipit nulla suscipit interdum.</p>
           <a href="#" class="button">Learn More</a> </div>
+
+
         <div id="tbox2">
           <div class="title">
             <h2>The Presidency</h2>
           </div>
-          <p>Proin eu wisi suscipit nulla suscipit interdum. Nullam non wisi a sem semper suscipit eleifend. Donec mattis libero eget urna. Duis  velit ac mauris.</p>
-          <a href="#" class="button">Learn More</a> </div>
+          <div id="tweet-box">
+            {{> tweetAppRequest}}
+            <p>{{> syriaTweet}}</p>
+          </div>
+          
+        </div>
+
         <div id="tbox3">
           <div class="title">
             <h2>The Senate and the House</h2>
@@ -78,11 +85,14 @@ Released   : 20140322
 </template>
 
 
+<template name="tweetAppRequest">
+  <button class="find-a-tweet">Find a tweet</button>
+</template>
 
-
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+<template name="syriaTweet">
+  {{#with status}}
+    {{status.statuses}}
+  {{/with}}
 </template>
 
 
