more work done, still no success on client side data migration

--- a/client/main/index.html
+++ b/client/main/index.html
@@ -40,7 +40,7 @@ Released   : 20140322
           </div>
           <div id="tweet-box">
             {{> tweetAppRequest}}
-            <p>{{> syriaTweet}}</p>
+            {{> syriaTweet}}
           </div>
           
         </div>
@@ -90,9 +90,9 @@ Released   : 20140322
 </template>
 
 <template name="syriaTweet">
-  {{#with status}}
-    {{status.statuses}}
-  {{/with}}
+<!--   {{#with status}}
+    <p>{{status}}</p>
+  {{/with}} -->
 </template>
 
 
