data from server to client callback in working order

--- a/client/main/index.html
+++ b/client/main/index.html
@@ -90,9 +90,9 @@ Released   : 20140322
 </template>
 
 <template name="syriaTweet">
-<!--   {{#with status}}
-    <p>{{status}}</p>
-  {{/with}} -->
+  {{#with status}}
+    <p>{{account}}</p>
+  {{/with}}
 </template>
 
 
