--- a/client/main/index.html
+++ b/client/main/index.html
@@ -30,27 +30,23 @@ Released   : 20140322
           <div class="title">
             <h2>The Supreme Court</h2>
           </div>
-          <p>Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac suscipit mauris. Proin eu wisi suscipit nulla suscipit interdum.</p>
-          <a href="#" class="button">Learn More</a> </div>
-
+          <!-- {{> tweetAppRequest}} -->
+        </div>
 
         <div id="tbox2">
           <div class="title">
             <h2>The Presidency</h2>
           </div>
-          <div id="tweet-box">
-            {{> tweetAppRequest}}
-            {{> syriaTweet}}
-          </div>
-          
+          {{> tweetAppRequestPresident}}
         </div>
+
 
         <div id="tbox3">
           <div class="title">
             <h2>The Senate and the House</h2>
           </div>
-          <p>Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Nullam non wisi a sem suscipit  eleifend.</p>
-          <a href="#" class="button">Learn More</a> </div>
+          <!-- {{> tweetAppRequest}} -->
+        </div>
       </div>
 
       <!-- Other centers of power within the U.S. gov? -->
@@ -85,16 +81,19 @@ Released   : 20140322
 </template>
 
 
-<template name="tweetAppRequest">
-  <button class="find-a-tweet">Find a tweet</button>
+<template name="tweetAppRequestPresident">
+  <div>
+    {{#each account}}
+      {{#if error}}
+        <p>There was an error</p>
+      {{else}}
+        <p>{{name}}</p>
+        <p>{{status.full_text}}</p>
+      {{/if}}
+    {{/each}}
+  </div>
+  <button class="button" id="find-a-tweet">Find a tweet</button> 
 </template>
-
-<template name="syriaTweet">
-  {{#with status}}
-    <p>{{account}}</p>
-  {{/with}}
-</template>
-
 
 
 
