Legislative API call and display functionality complete

--- a/client/main/index.html
+++ b/client/main/index.html
@@ -1,16 +1,13 @@
+
 <!--
 Design by TEMPLATED
 http://templated.co
 Released for free under the Creative Commons Attribution License
-
 Name       : Undeviating 
 Description: A two-column, fixed-width design with dark color scheme.
 Version    : 1.0
 Released   : 20140322
-
 -->
-
-
 
 <template name="index">
   <body>
@@ -44,37 +41,10 @@ Released   : 20140322
         <div id="tbox3">
           <div class="title">
             <h2>The Senate and the House</h2>
+            <a href="/legislative"> <button class="button">What are the Legislative Leaders Saying</button></a>
           </div>
         </div>
       </div>
-
-<!--       Other centers of power within the U.S. gov?
-      <div id="portfolio" class="container">
-        <div class="column1">
-          <div class="box">
-            <h3>Vestibulum venenatis</h3>
-            <p>Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
-          <a href="#" class="button button-small">Etiam posuere</a> </div>
-        </div>
-        <div class="column2">
-          <div class="box">
-            <h3>Praesent scelerisque</h3>
-            <p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
-          <a href="#" class="button button-small">Etiam posuere</a> </div>
-        </div>
-        <div class="column3">
-          <div class="box">
-            <h3>Donec dictum metus</h3>
-            <p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
-          <a href="#" class="button button-small">Etiam posuere</a> </div>
-        </div>
-        <div class="column4">
-          <div class="box">
-            <h3>Mauris vulputate dolor</h3>
-            <p>Rutrum fermentum nibh in augue praesent urna congue rutrum.</p>
-          <a href="#" class="button button-small">Etiam posuere</a> </div>
-        </div>
-      </div> -->
     </div>
   </body>
 </template>
@@ -91,7 +61,7 @@ Released   : 20140322
       {{/if}}
     {{/each}}
   </div>
-  <button class="button" id="find-a-tweet-president">Find a tweet</button> 
+  <button class="button" id="find-a-tweet-president">What is the President Saying</button> 
 </template>
 
 <template name="tweetAppRequestSCOTUS">
@@ -105,10 +75,8 @@ Released   : 20140322
       {{/if}}
     {{/each}}
   </div>
-  <button class="button" id="find-a-tweet-sc">Find a tweet</button> 
+  <button class="button" id="find-a-tweet-sc">What is the Supreme Court Deciding on</button> 
 </template>
-
-
 
 
 
