made client-side cosmetic adjustments

--- a/client/legislative/legislative.html
+++ b/client/legislative/legislative.html
@@ -85,7 +85,7 @@
       {{/if}}
     {{/each}}
   </div>
-  <button class="button button-small" id="find-a-tweet-senMajLdr">What is the Senate Majority Leader Saying</button> 
+  <button class="button button-small" id="find-a-tweet-senMajLdr">Senate Majority Leader</button> 
 </template>
 
 <template name="tweetAppRequestSenMinLdr">
@@ -99,7 +99,7 @@
       {{/if}}
     {{/each}}
   </div>
-  <button class="button button-small" id="find-a-tweet-senMinLdr">What is the Senate Minority Leader Saying</button> 
+  <button class="button button-small" id="find-a-tweet-senMinLdr">Senate Minority Leader</button> 
 </template>
 
 <template name="tweetAppRequestHouseMajLdr">
@@ -113,7 +113,7 @@
       {{/if}}
     {{/each}}
   </div>
-  <button class="button button-small" id="find-a-tweet-houseMajLdr">What is the House Majority Leader Saying</button> 
+  <button class="button button-small" id="find-a-tweet-houseMajLdr">House Majority Leader</button> 
 </template>
 
 <template name="tweetAppRequestHouseMinLdr">
@@ -127,7 +127,7 @@
       {{/if}}
     {{/each}}
   </div>
-  <button class="button button-small" id="find-a-tweet-houseMinLdr">What is the House Minority Leader Saying</button> 
+  <button class="button button-small" id="find-a-tweet-houseMinLdr">House Minority Leader</button> 
 </template>
 
 
