Made API twitter calls happen automatically after the page loads, removed api call buttons

--- a/client/legislative/legislative.html
+++ b/client/legislative/legislative.html
@@ -89,7 +89,7 @@
       {{/if}}
     {{/each}}
   </div>
-  <button class="button button-small" id="find-a-tweet-senMajLdr">View Last Tweet</button> 
+  <!-- <button class="button button-small" id="find-a-tweet-senMajLdr">View Last Tweet</button>  -->
 </template>
 
 <template name="tweetAppRequestSenMinLdr">
@@ -103,7 +103,7 @@
       {{/if}}
     {{/each}}
   </div>
-  <button class="button button-small" id="find-a-tweet-senMinLdr">View Last Tweet</button> 
+  <!-- <button class="button button-small" id="find-a-tweet-senMinLdr">View Last Tweet</button>  -->
 </template>
 
 <template name="tweetAppRequestHouseMajLdr">
@@ -117,7 +117,7 @@
       {{/if}}
     {{/each}}
   </div>
-  <button class="button button-small" id="find-a-tweet-houseMajLdr">View Last Tweet</button> 
+  <!-- <button class="button button-small" id="find-a-tweet-houseMajLdr">View Last Tweet</button>  -->
 </template>
 
 <template name="tweetAppRequestHouseMinLdr">
@@ -131,7 +131,7 @@
       {{/if}}
     {{/each}}
   </div>
-  <button class="button button-small" id="find-a-tweet-houseMinLdr">View Last Tweet</button> 
+  <!-- <button class="button button-small" id="find-a-tweet-houseMinLdr">View Last Tweet</button>  -->
 </template>
 
 
