--- a/client/main/index.html
+++ b/client/main/index.html
@@ -62,7 +62,8 @@ Released   : 20140322
       {{/if}}
     {{/each}}
   </div>
-  <button class="button" id="find-a-tweet-president">View Last Tweet</button> 
+  <!-- *** Below is the old button call to twitter *** -->
+<!--   <button class="button" id="find-a-tweet-president">View Last Tweet</button> Old Method -->
 </template>
 
 <template name="tweetAppRequestSCOTUS">
@@ -76,7 +77,8 @@ Released   : 20140322
       {{/if}}
     {{/each}}
   </div>
-  <button class="button" id="find-a-tweet-sc">View Last Tweet</button> 
+  <!-- *** Below is the old button call to twitter *** -->
+<!--   <button class="button" id="find-a-tweet-sc">View Last Tweet</button> -->
 </template>
 
 
