Made API twitter calls happen automatically after the page loads, removed api call buttons

--- a/client/main/index.html
+++ b/client/main/index.html
@@ -62,8 +62,7 @@ Released   : 20140322
       {{/if}}
     {{/each}}
   </div>
-  <!-- *** Below is the old button call to twitter *** -->
-<!--   <button class="button" id="find-a-tweet-president">View Last Tweet</button> Old Method -->
+  <button class="button" id="find-a-tweet-president">View Last Tweet</button>
 </template>
 
 <template name="tweetAppRequestSCOTUS">
@@ -77,8 +76,7 @@ Released   : 20140322
       {{/if}}
     {{/each}}
   </div>
-  <!-- *** Below is the old button call to twitter *** -->
-<!--   <button class="button" id="find-a-tweet-sc">View Last Tweet</button> -->
+  <button class="button" id="find-a-tweet-sc">View Last Tweet</button>
 </template>
 
 
