added profile picture to twitter account to html

--- a/client/legislative/legislative.html
+++ b/client/legislative/legislative.html
@@ -84,6 +84,7 @@
       {{#if error}}
         <p>There was an error</p>
       {{else}}
+        <img src="{{profile_image_url_https}}" class="profileImage">
         <h3>{{name}}</h3>
         <p>{{status.full_text}}</p>
       {{/if}}
@@ -98,6 +99,7 @@
       {{#if error}}
         <p>There was an error</p>
       {{else}}
+        <img src="{{profile_image_url_https}}" class="profileImage">
         <h3>{{name}}</h3>
         <p>{{status.full_text}}</p>
       {{/if}}
@@ -112,6 +114,7 @@
       {{#if error}}
         <p>There was an error</p>
       {{else}}
+        <img src="{{profile_image_url_https}}" class="profileImage">
         <h3>{{name}}</h3>
         <p>{{status.full_text}}</p>
       {{/if}}
@@ -126,6 +129,7 @@
       {{#if error}}
         <p>There was an error</p>
       {{else}}
+        <img src="{{profile_image_url_https}}" class="profileImage">
         <h3>{{name}}</h3>
         <p>{{status.full_text}}</p>
       {{/if}}
