Project is largely complete, updated profile pic size

--- a/client/legislative/legislative.html
+++ b/client/legislative/legislative.html
@@ -84,7 +84,7 @@
       {{#if error}}
         <p>There was an error</p>
       {{else}}
-        <img src="{{profile_image_url_https}}" class="profileImage">
+        <img src="{{profile_image_url_https}}" class="profile-image">
         <h3>{{name}}</h3>
         <p>{{status.full_text}}</p>
       {{/if}}
@@ -99,7 +99,7 @@
       {{#if error}}
         <p>There was an error</p>
       {{else}}
-        <img src="{{profile_image_url_https}}" class="profileImage">
+        <img src="{{profile_image_url_https}}" class="profile-image">
         <h3>{{name}}</h3>
         <p>{{status.full_text}}</p>
       {{/if}}
@@ -114,7 +114,7 @@
       {{#if error}}
         <p>There was an error</p>
       {{else}}
-        <img src="{{profile_image_url_https}}" class="profileImage">
+        <img src="{{profile_image_url_https}}" class="profile-image">
         <h3>{{name}}</h3>
         <p>{{status.full_text}}</p>
       {{/if}}
@@ -129,7 +129,7 @@
       {{#if error}}
         <p>There was an error</p>
       {{else}}
-        <img src="{{profile_image_url_https}}" class="profileImage">
+        <img src="{{profile_image_url_https}}" class="profile-image">
         <h3>{{name}}</h3>
         <p>{{status.full_text}}</p>
       {{/if}}
