--- a/client/main/index.html
+++ b/client/main/index.html
@@ -56,7 +56,7 @@ Released   : 20140322
       {{#if error}}
         <p>There was an error</p>
       {{else}}
-        <img src="{{profile_image_url_https}}" class="profileImage">
+        <img src="{{profile_image_url_https}}" class="profile-image">
         <h3>{{name}}</h3>
         <p>{{status.full_text}}</p>
       {{/if}}
@@ -71,7 +71,7 @@ Released   : 20140322
       {{#if error}}
         <p>There was an error</p>
       {{else}}
-        <img src="{{profile_image_url_https}}" class="profileImage">
+        <img src="{{profile_image_url_https}}" class="profile-image">
         <h3>{{name}}</h3>
         <p>{{status.full_text}}</p>
       {{/if}}
