--- a/client/about/about.html
+++ b/client/about/about.html
@@ -10,12 +10,19 @@
 		  	<h2>About</h2>
 			</div>
 			<p>
-				Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel. Vestibulum et efficitur urna. Duis velit nulla, interdum sed felis sit amet, facilisis auctor nunc. Cras luctus urna at risus feugiat scelerisque nec sed diam.
+				The election of Donald Trump in 2016 heralded a new era of Presidential communications. Twitter allowed Trump to speak to his followers directly and concisely thus allowing him to circumvent the filter of the U.S. National Media. A plethora of new terms have been added to the Political Lexicon such as "Twitter Diplomacy" and the "Twitter Presidency". 
+			</p>
+			<p>
+				While many ascribe the use of twitter as an instrument of political and policy communication solely to Trump's eclectic personality we believe, on the contrary, that this is no passing fad or phenomenon. Twitter, or micro-blogs in general, has shown itself to be too effective in getting a message out quickly to people on a mass scale. This sort of political communication is here to stay and will continue to grow in use and prominence.
+			</p>
+			<p>
+				In acknowledgment of those trends we here at polis see an opportunity to show you what the people within the U.S. government are thinking. By gathering and displaying all high government officials twitter posts in one area an effective snapshot can be given of what people in power are thinking. Personnel is Policy and by knowing what the people in power are thinking it may be inferred the policy the U.S. government may take. 
 			</p>
 
 			<p>
-				Nunc fringilla metus odio, at rutrum augue tristique vel. Nulla ac tellus a neque ullamcorper porta a vitae ipsum. Morbi est sapien, hendrerit quis mi in, aliquam bibendum orci. Vestibulum imperdiet nibh vitae maximus posuere. Aenean sit amet nibh feugiat, condimentum tellus eu, malesuada nunc. Mauris ac pulvinar turpis, sit amet pharetra est. Ut bibendum justo condimentum, vehicula ex vel, venenatis libero. Etiam vehicula urna sed justo bibendum, ac lacinia nunc pulvinar. Integer nec velit orci. Vestibulum pellentesque varius dapibus. Morbi ullamcorper augue est, sed luctus orci fermentum dictum. Nunc tincidunt, nisl consequat convallis viverra, metus nisl ultricies dui, vitae dapibus ligula urna sit amet nibh. Duis ut venenatis enim.
+				So go ahead, take a look, analyze and enjoy. Welcome to polis.
 			</p>
+
 		</div>
 	</div>
 
